src/objects/UM_BillingAccountItem__c.object
<CustomObject>
    <fields>
        <fullName>UM_Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Recalled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UM_Approval_Timestamp__c</fullName>
        <label>Approval Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UM_BillingAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>csconta__Billing_Account__c</referenceTo>
        <relationshipLabel>Billing Account Items</relationshipLabel>
        <relationshipName>Billing_Account_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UM_BillingCode__c</fullName>
        <label>Billing Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_BillingType__c</fullName>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One-Off</fullName>
                </value>
                <value>
                    <fullName>Recurring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_Billing_Account_Number__c</fullName>
        <formula>UM_BillingAccount__r.LG_BillingAccountNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Description__c</fullName>
        <description>description for adjustment type records</description>
        <inlineHelpText>Upto 50 characters are allowed in description</inlineHelpText>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Discount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Discount</label>
        <referenceTo>LG_Discount__c</referenceTo>
        <relationshipLabel>Billing Account Items</relationshipLabel>
        <relationshipName>Billing_Account_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UM_EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UM_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Billing External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Is_Future_Dated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Future Dated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_ItemType__c</fullName>
        <label>Item Type</label>
        <picklist>
            <picklistValues>
                <fullName>Discount</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>One-time Charge</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UM_Kenan_Sync_Message__c</fullName>
        <label>Kenan Sync Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UM_Last_Synced_with_Billing__c</fullName>
        <label>Last Synced with Billing</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UM_NRC_Reason__c</fullName>
        <description>stores NRC reasons</description>
        <label>NRC Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Kulanz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preisanpassung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steuergutschrift (ohne MwSt.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Falscher Rechnungsbetrag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Falsches Produkt gebucht</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netzwerkausfall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korrektur Kündigung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Techn. Problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portierung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rechnungskorrektur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beschwerde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Servicegarantie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interne Korrektur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bereitstellungsentgelte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monatliche Entgelte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Versandkosten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bankgebühr Belastung (ohne MwSt.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bankgebühr Gutschrift (ohne MwSt.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mahngebühren Belastung (ohne MwSt.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mahngebühren Gutschrift (ohne MwSt.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inkasso Abschreibung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insolvenz Abschreibung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direktzahlung Inkasso Belastung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usage Mobil (GS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usage Festnetz  (GS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usage (GS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usage Mobil (Belastung)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usage Festnetz (Belastung)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usage (Belastung)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UM_NumberofMonths__c</fullName>
        <label>Number of Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UM_Percentage__c</fullName>
        <label>Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UM_Received_from_Billing_System__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is to differentiate whether record got created in SF or came from billing system</description>
        <label>Received from Billing System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_StartDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UM_Total_Amount__c</fullName>
        <description>used for Adjustment type records</description>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Billing Account Item</label>
    <listViews>
        <fullName>Adjustments</fullName>
        <columns>NAME</columns>
        <columns>UM_NRC_Reason__c</columns>
        <columns>UM_Description__c</columns>
        <columns>UM_ItemType__c</columns>
        <columns>UM_BillingType__c</columns>
        <columns>UM_StartDate__c</columns>
        <columns>UM_Total_Amount__c</columns>
        <columns>UM_BillingCode__c</columns>
        <columns>UM_External_Id__c</columns>
        <columns>UM_Received_from_Billing_System__c</columns>
        <columns>UM_Approval_Status__c</columns>
        <columns>UM_Approval_Timestamp__c</columns>
        <columns>UM_Last_Synced_with_Billing__c</columns>
        <columns>UM_Kenan_Sync_Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>UM_BillingAccountItem__c.Adjustment</value>
        </filters>
        <label>Adjustments</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BI-{0000}</displayFormat>
        <label>Billing Account Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Account Items</pluralLabel>
    <recordTypes>
        <fullName>Adjustment</fullName>
        <active>true</active>
        <label>Adjustment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Discount</fullName>
        <active>true</active>
        <label>Discount</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_Create_new_BAI_For_Inactive_BA</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISPICKVAL(UM_BillingAccount__r.csconta__Status__c, &apos;Deactivation Pending&apos;),ISPICKVAL(UM_BillingAccount__r.csconta__Status__c, &apos;Inactive&apos;),ISPICKVAL(UM_BillingAccount__r.csconta__Status__c, &apos;New&apos;),ISPICKVAL(UM_BillingAccount__r.csconta__Status__c, &apos;Pending activation&apos;),ISPICKVAL(UM_BillingAccount__r.csconta__Status__c, &apos;Pending disconnection&apos;),ISPICKVAL(UM_BillingAccount__r.csconta__Status__c, &apos;Disconnected&apos;))</errorConditionFormula>
        <errorMessage>You cannot create or edit Billing account items on Billing accounts with status other than &quot;Active&quot; or &quot;Deactivation Requested&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NRC_Reason_Restriction_for_Kenan_Records</fullName>
        <active>false</active>
        <description>Restrict User to select  manually NRC Reason &quot;Adjustment from Kenan&quot; . This value is meant to be used form Adjustment records are created in kenan and fed to SF.</description>
        <errorConditionFormula>AND( UM_Received_from_Billing_System__c == false, ISPICKVAL( UM_NRC_Reason__c , &apos;Adjustment from Kenan&apos;) )</errorConditionFormula>
        <errorMessage>NRC Reason Value &quot;Adjustment from Kenan&quot;  is not valid unless records are fed from Kenan. Please Select any other Listed reason.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UM_Manager_cannot_be_empty_for_approval</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.Name==&apos;Adjustment&apos; &amp;&amp;  ISBLANK(Owner:User.ManagerId)&amp;&amp;  UM_Received_from_Billing_System__c ==false</errorConditionFormula>
        <errorMessage>There is no Manager for the current submitter. Please set the Manager for the current user submitting the record.</errorMessage>
    </validationRules>
</CustomObject>